--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ ul{
     margin-bottom: 0;
     padding-left: 1rem;
 }
+.navbar-fixed-top{
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+}
 .about{
     height: 40em;
     background-color: #222;
