--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ ul{
     margin: auto;
     margin-top: 1.5em;
     border-radius: 10px;
+
+    box-shadow: 0px 0px 9px 3px rgba(255,255,255,0.53);
+    -webkit-box-shadow: 0px 0px 9px 3px rgba(255,255,255,0.53);
+    -moz-box-shadow: 0px 0px 9px 3px rgba(255,255,255,0.53);
 }
 .barTerminal{
     height: 2em;
@@ -101,14 +105,18 @@ ul{
     margin: auto;
     margin-top: 4em;
     border-radius: 0.5em;
+
+    box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.53);
+    -webkit-box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.53);
+    -moz-box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.53);
 }
 .barFileManager{
     text-align: center;
 }
-.menuFileManager > ul{
+.menuFileManager > ul, .menuVSC > ul{
     list-style: none;
 }
-.menuFileManager > ul >li{
+.menuFileManager > ul >li, .menuVSC > ul > li{
     display: inline-block;
     margin: 0 0.5em;
 }
@@ -188,6 +196,10 @@ ul{
     margin-top: auto;
     margin-top: 4em;
     border-radius: 0.5em;
+
+    box-shadow: 0px 0px 9px 3px rgba(255,255,255,0.53);
+    -webkit-box-shadow: 0px 0px 9px 3px rgba(255,255,255,0.53);
+    -moz-box-shadow: 0px 0px 9px 3px rgba(255,255,255,0.53);
 }
 .barBrowser{
     text-align: center;
@@ -196,4 +208,103 @@ ul{
     color: black;
     background-color: white;
     height: 50em;
+}
+.pestañaBrowser > ul > li{
+    display: inline-block;
+    background-color: #646464;
+    padding-left: 0.5em;
+    border-top: 0.15em solid #3434ff;
+}
+.pestañaBrowser > ul > li > svg{
+    width: 1.5em;
+    height: 1.5em;
+    transform: rotate(45deg);
+}
+.navegadorBrowser, .favoritosBrowser{
+    background-color: #646464;
+    margin: 0 1em 0 1em;
+    height: 2em;
+    padding-top: 0.2em;
+}
+.botonesBrowser > svg {
+    margin: 0em 0.5em 0em 0.5em;
+}
+.botonesBrowser{
+    display: inline-block;
+}
+.enlaceBrowser{
+    display: inline-block;
+    background-color: #2b2b2b;
+    width: 80%;
+    border: 0.1em solid black;
+    border-radius: 0.3em;
+    padding: 0 1em 0 1em;
+}
+.enlaceBrowser > a{
+    text-decoration: none;
+    list-style: none;
+    color: white;
+    display: block;
+}
+.favoritosBrowser > ul {
+    padding-left: 0.5em;
+}
+.favoritosBrowser > ul > li{
+    display: inline-block;
+    margin-right: 0.5em;
+}
+.favoritosBrowser > ul > li > a{
+    list-style: none;
+    text-decoration: none;
+    color: white;
+}
+.bodyBrowser{
+    background-color: white;
+    height: 32em;
+    margin: 0 1em;
+}
+.bodyBrowser > img {
+    width: 100%;
+    height: 100%;
+}
+
+.VSC{
+    width: 80%;
+    height: 80%;
+    background-color: #191924;
+    margin: auto;
+    margin-top: auto;
+    margin-top: 4em;
+    border-radius: 0.5em;
+
+    box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.53);
+    -webkit-box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.53);
+    -moz-box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.53);
+}
+.VSC{
+    color: white;
+}
+.barVSC{
+    /* color: white; */
+    text-align: center;
+}
+.barVSC > img{
+    width: 1.2em;
+    float: left;
+    margin: 0.5em 0 0 0.5em;
+}
+.cuerpoVSC{
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 4.5em;
+    font-size: 2em;
+}
+.cuerpoVSC > p > a {
+    text-decoration: none;
+    color: white;
+}
+.cuerpoVSC > p > a > svg{
+    font-size: 2em;
+    width: 0.5em;
+    height: 0.5em;
 }
