--- a/style.css
+++ b/style.css
@@ -530,8 +530,11 @@ ul > li,
     .fileManager{
         height: 42em;
     }
-    .browser, .VSC{
+    .browser{
         height: 18em;
+    }
+    .VSC{
+        height: 20em;
     }
     .navBarFileManager{
         display: none;
@@ -573,7 +576,7 @@ ul > li,
         height: auto;
     }
 }
-@media (max-width: 424px) {
+@media (max-width: 424px) and (max-height:735px) {
     .browser, .VSC{
         margin-top: 70%;
     }
@@ -607,7 +610,45 @@ ul > li,
         }
     }
 }
-@media (max-width: 375px) {
+@media (max-width: 424px) and (min-height:736px) {
+    .browser, .VSC{
+        margin-top: 55%;
+    }
+    .fileManager{
+        margin-top: 13%;
+        height: 40em;
+    }
+    .terminal{
+        margin-top: 14%;
+    }
+    .bodyTerminal{
+        height: 32em;
+    }
+    .navBarFileManager > ul {
+        padding-left: 0;
+    }
+    .BARexploradorFileManager{
+        font-size: 0.88em;
+    }
+    .menuFileManager > ul >li{
+        margin: 0 0.4em;
+    }
+    .bodyTerminal{
+        height: 35em;
+    }
+    .comandoTerminal,.avatar{
+        margin-bottom: 1em;
+    }
+    @keyframes ver {
+        from{
+            height: 35em;
+        }
+        to{
+            height: 0;
+        }
+    }
+}
+@media (max-width: 376px) {
     .logo{
         font-size: 0.8em;
     }
@@ -621,8 +662,11 @@ ul > li,
     .BARexploradorFileManager > svg{
         display: inline;
     }
+    .VSC{
+        height: 22em;
+    }
 }
-@media (max-width: 374px) and (max-height: 750px) {
+@media (max-width: 375px) and (max-height: 750px) {
     .terminal, .fileManager, .browser, .VSC{
         height: 90%;
         margin-top: 14%;
@@ -636,8 +680,13 @@ ul > li,
 }
 @media (max-width: 374px) and (max-height: 650px) {
     .browser, .VSC{
-        height: 18em;
         margin-top: 50%;
+    }
+    .browser{
+        height: 18em;
+    }
+    .VSC{
+        height: 21em;
     }
     .perfil{
         font-size: 1em;
