--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+body{
+    background-color: white;
+}
+body > div{
+    padding: 0 !important;
+}
+ul{
+    margin-bottom: 0;
+    padding-left: 1rem;
+}
+#carouselExampleDark > .fp-tableCell {
+    height: 100% !important;
+}
+.fp-slides{
+    overflow: initial;
+}
+.carousel-dark .carousel-caption {
+    background-color: #00000078 !important;
+    color: white;
+}
 .logo{
     background-color: white;
     border-radius: 0.5em;
@@ -37,13 +57,6 @@
 @keyframes titilar {
     50%{border-color: transparent;}
 }
-body{
-    background-color: white;
-}
-ul{
-    margin-bottom: 0;
-    padding-left: 1rem;
-}
 .carousel-control-next, .carousel-control-prev{
     background-color: #00000024;
 }
@@ -82,7 +95,7 @@ ul{
 }
 @keyframes subir {
     from{
-        margin-top: 300%;
+        margin-top: 150%;
     }
     to{
         margin-top: 4em;
@@ -96,7 +109,7 @@ ul{
 }
 @keyframes rightToLeft {
     from{
-        margin-left: 300%;
+        margin-left: 100%;
     }
     to{
         margin-left: 10%;
@@ -110,7 +123,7 @@ ul{
 }
 @keyframes leftToRight {
     from{
-        margin-left: -200%;
+        margin-left: -100%;
     }
     to{
         margin-left: 10%;
@@ -293,7 +306,7 @@ ul > li,
 #listSkills > li {
     width: 10%;
     display: inline-block;
-    margin: 0 1em 0 1em;
+    margin: 1.5em 1.5em 0 1.5em;
 }
 .pestañaBrowser > ul > li{
     display: inline-block;
@@ -356,8 +369,11 @@ ul > li,
 .cuerpoVSC{
     text-align: center;
     vertical-align: middle;
-    padding-top: 4.5em;
+    padding-top: 7em;
     font-size: 2em;
+}
+.cuerpoVSC > p {
+    display: inline;
 }
 .cuerpoVSC > p > a,
 .contentFileManager > ul> li > a,
@@ -367,9 +383,10 @@ ul > li,
     text-decoration: none;
 }
 .cuerpoVSC > p > a > svg{
-    font-size: 2em;
+    font-size: 8em;
     width: 0.5em;
     height: 0.5em;
+    margin: 0 0.5em;
 }
 .contact1{
     display: inline;
@@ -407,6 +424,15 @@ ul > li,
     .exploradorFileManager {
         height: 79%;
     }
+    .cuerpoVSC > p > a > svg{
+        margin: 0 0.3em;
+    }
+    .cuerpoVSC {
+        padding-top: 4em;
+    }
+    #listSkills > li {
+        margin: 0em 1em 0 1em;
+    }
 }
 @media (max-width: 1199.98px) {
     .terminal, .fileManager, .browser, .VSC{
@@ -428,6 +454,9 @@ ul > li,
     }
     .contentFileManager{
         width: 76%;
+    }
+    .cuerpoVSC{
+        padding-top: 9em;
     }
 }
 @media (max-width: 991.98px) {
@@ -462,6 +491,9 @@ ul > li,
     }
     .bodyBrowser {
         height: 35.5em;
+    }
+    .cuerpoVSC > p > a > svg {
+        margin: 0 0.2em;
     }
 }
 @media (max-width: 991.98px) and (max-height: 1024px) {
@@ -509,6 +541,9 @@ ul > li,
     }
     .contentFileManager{
         width: 70%;
+    }
+    .cuerpoVSC > p > a > svg {
+        margin: 0 0.1em;
     }
 }
 @media (max-width: 576px) {
@@ -664,6 +699,12 @@ ul > li,
     }
     .VSC{
         height: 22em;
+    }
+    .cuerpoVSC > p > a > svg {
+        margin: 0 0.2em;
+    }
+    .cuerpoVSC{
+        padding-top: 5em;
     }
 }
 @media (max-width: 375px) and (max-height: 750px) {
