se actualizo avatar y se ajusto CV, se agrego discord

--- a/CV/style.css
+++ b/CV/style.css
@@ -35,7 +35,8 @@ body{
 }
 .foto{
     display: block;
-    width: 100%;
+    width: 75%;
+    margin: auto;
     border-radius: 50%;
     background-color: white;
 }
