--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ header {
     color: white;
 }
 header > div.left > span {
-    /* font-size: 2rem; */
     font-weight: bold;
     margin-left: 1rem;
 }
@@ -33,26 +32,30 @@ main {
     height: calc(100vh - 1.5rem);
 }
 main > div.ventanas {
-    /* background-color: red; */
     height: 100vh;
     background-image: url("./assets/fondos/0_HICLyAdNSIyT0ODU.jpg");
     background-position: center;
     background-size: 110rem;
 }
-.acercade {
-    overflow: hidden;
-    /* background-color: rgb(0 0 255 / 50%); */
-    background-color: rgb(0 1 18);
+.acercade,
+.habilidades,
+.proyectos,
+.retos,
+.contacto {
     color: white;
     position: absolute;
-    bottom: 45px;
-    left: 10%;
-    top: calc(100% - 45px);
+    top: calc(100% - 2.4rem);
     width: 0;
     height: 0;
     opacity: 0;
-    border-radius: 100%;
+    /* border-radius: 100%; */
     transition: all 0.5s ease-in-out;
+    transform: scale(0);
+}
+.acercade {
+    overflow: hidden;
+    background-color: rgb(0 1 18);
+    left: 10%;
 }
 .acercade > .barra {
     display: grid;
@@ -88,16 +91,8 @@ main > div.ventanas {
 }
 .habilidades {
     overflow: scroll;
-    width: 0px;
-    height: 0px;
     background-color: rgb(71 71 76);
-    color: white;
-    position: absolute;
-    top: calc(100% - 2.4rem);
     left: 30%;
-    opacity: 0;
-    border-radius: 100%;
-    transition: all 0.5s ease-in-out;
 }
 .habilidades > .barra {
     display: grid;
@@ -162,18 +157,9 @@ main > div.ventanas {
     justify-items: center;
 }
 .proyectos {
-    /* overflow: scroll; */
     overflow: hidden;
-    width: 0px;
-    height: 0px;
     background-color: rgb(71 71 76);
-    color: white;
-    position: absolute;
-    top: calc(100% - 2.4rem);
     left: 50%;
-    opacity: 0;
-    border-radius: 100%;
-    transition: all 0.5s ease-in-out;
 }
 .proyectos > .botones,
 .retos > .botones {
@@ -222,7 +208,6 @@ main > div.ventanas {
     border-radius: 0.5rem;
 }
 .contentProyects {
-    background-color: red;
     height: calc(100% - 4rem);
 }
 .contentProyects > picture > img {
@@ -230,17 +215,8 @@ main > div.ventanas {
 }
 .retos {
     overflow: scroll;
-    /* overflow: hidden; */
-    width: 0px;
-    height: 0px;
     background-color: rgb(71 71 76);
-    color: white;
-    position: absolute;
-    top: calc(100% - 2.4rem);
     left: 70%;
-    opacity: 0;
-    border-radius: 100%;
-    transition: all 0.5s ease-in-out;
 }
 .retos > .barGallery {
     position: relative;
@@ -254,18 +230,9 @@ main > div.ventanas {
     transform: translate(-50%, -50%);
 }
 .contacto {
-    /* overflow: scroll; */
     overflow: hidden;
-    width: 0px;
-    height: 0px;
     background-color: rgb(1 1 34);
-    color: white;
-    position: absolute;
-    top: calc(100% - 2.4rem);
     left: 90%;
-    opacity: 0;
-    border-radius: 100%;
-    transition: all 0.5s ease-in-out;
 }
 .contacto > .barTelegram {
     position: relative;
@@ -298,8 +265,9 @@ main > div.ventanas {
     width: 100%;
     height: calc(100% - 4rem);
     border-radius: 0%;
-    /* transform: scale(1); */
+    transform: scale(1);
     opacity: 1;
+    z-index: 10;
 }
 .menu {
     position: absolute;
@@ -309,7 +277,6 @@ main > div.ventanas {
     color: white;
     transition: background-color 0.5s ease-in-out;
 }
-
 .menu > ul {
     list-style: none;
     height: 4rem;
