--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ main > div.ventanas {
     width: 0;
     height: 0;
     opacity: 0;
-    /* border-radius: 100%; */
     transition: all 0.5s ease-in-out;
     transform: scale(0);
 }
@@ -166,38 +165,26 @@ main > div.ventanas {
     grid-row-gap: 0.5rem;
 }
 .proyectos {
-    overflow: hidden;
+    overflow: scroll;
     background-color: rgb(71 71 76);
     left: 50%;
 }
-.proyectos > .botones,
-.retos > .botones {
+.proyectos > #left,
+.proyectos > #right,
+.retos > #left,
+.retos > #right {
     position: absolute;
     top: 0;
     height: 100%;
-    width: 100%;
+    background-color: rgb(255 255 255 / 50%);
+    width: 20%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-}
-.proyectos > .botones > div,
-.retos > .botones > div {
-    width: 30%;
-    height: 100%;
-    background-color: rgb(255 255 255 / 30%);
     cursor: pointer;
 }
-.proyectos > .botones > div > picture,
-.retos > .botones > div > picture {
-    position: absolute;
-    top: 50%;
-}
-.proyectos > .botones > div:last-child,
-.retos > .botones > div:last-child {
-    text-align: end;
-}
-.proyectos > .botones > div:last-child > picture,
-.retos > .botones > div:last-child > picture {
+.proyectos > #right,
+.retos > #right {
     right: 0;
 }
 .barNavigation{
@@ -216,12 +203,60 @@ main > div.ventanas {
     border: 1px solid rgb(255 255 255 / 30%);
     border-radius: 0.5rem;
 }
-.contentProyects {
+.barNavigation > h1 > a,
+.barGallery > h1 > a {
+    text-decoration: none;
+    color: white;
+}
+.contentProyects,
+.contentRetos {
+    display: flex;
     height: calc(100% - 4rem);
+    overflow: hidden;
 }
 .contentProyects > picture > img,
 .contentRetos > picture > img {
+    min-width: 100%;
+}
+.contentProyects > div,
+.contentRetos > div {
+    min-width: 100%;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    transition: all 0.5s ease-in-out;
+}
+.contentProyects > div > .info,
+.contentRetos > div > .info {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
     width: 100%;
+    background-color: rgb(0 0 0 / 50%);
+}
+.contentProyects > div > .info > a,
+.contentRetos > div > .info > a {
+    text-decoration: none;
+    color: white;
+}
+.contentProyects > div > .info > a > h2,
+.contentRetos > div > .info > a > h2 {
+    padding: 1rem;
+    font-size: 1.2rem;
+}
+.contentProyects > div > .info > a > .badge,
+.contentRetos > div > .info > a > .badge {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem 0.1rem;  
+    padding: 1rem;
+    justify-content: center;
+}
+.contentProyects > div > .info > a > .badge > span,
+.contentRetos > div > .info > a > .badge > span {
+    background-color: green;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.5rem;
 }
 .retos {
     overflow: scroll;
