--- a/style.css
+++ b/style.css
@@ -32,10 +32,24 @@ main {
     height: calc(100vh - 1.5rem);
 }
 main > div.ventanas {
-    height: 100vh;
-    background-image: url("./assets/fondos/0_HICLyAdNSIyT0ODU.jpg");
+    height: calc(100vh - 1.5rem);
+    background-image: url("./assets/fondos/wallpapersden.com_alien-minimalism_1920x1080.jpg");
     background-position: center;
-    background-size: 110rem;
+    /* background-size: 110rem; */
+    background-size: cover;
+    transition: background-image 0.5s ease-in-out;
+}
+main > div.title {
+    position: absolute;
+    top: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+main > div.title > h1 {
+    font-size: 2rem;
+    background-color: white;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
 }
 .acercade,
 .habilidades,
@@ -43,12 +57,14 @@ main > div.ventanas {
 .retos,
 .contacto {
     color: white;
+    box-shadow: 0 0 10px 1px rgb(0 0 0);
     position: absolute;
     top: calc(100% - 2.4rem);
     width: 0;
     height: 0;
     opacity: 0;
     transition: all 0.5s ease-in-out;
+    /* transition: top 0.5s ease-in-out; */
     transform: scale(0);
 }
 .acercade {
@@ -68,6 +84,9 @@ main > div.ventanas {
 }
 .acercade > .barra > picture {
     text-align: end;
+}
+.acercade > .comando {
+    display: none;
 }
 .acercade > .avatar {
     position: relative;
@@ -97,7 +116,7 @@ main > div.ventanas {
     text-align: justify;
 }
 .habilidades {
-    overflow: scroll;
+    overflow: auto;
     background-color: rgb(71 71 76);
     left: 30%;
 }
@@ -108,6 +127,9 @@ main > div.ventanas {
 }
 .habilidades > .barra > picture {
     text-align: end;
+}
+.habilidades > .barra > picture:last-child{
+    display: none;
 }
 .habilidades > .almacenamientoInterno {
     display: grid;
@@ -165,14 +187,14 @@ main > div.ventanas {
     grid-row-gap: 0.5rem;
 }
 .proyectos {
-    overflow: scroll;
+    overflow: auto;
     background-color: rgb(71 71 76);
     left: 50%;
 }
-.proyectos > #left,
-.proyectos > #right,
-.retos > #left,
-.retos > #right {
+.proyectos > .contentProyects > #left,
+.proyectos > .contentProyects > #right,
+.retos > .contentRetos > #left,
+.retos > .contentRetos > #right {
     position: absolute;
     top: 0;
     height: 100%;
@@ -183,9 +205,12 @@ main > div.ventanas {
     align-items: center;
     cursor: pointer;
 }
-.proyectos > #right,
-.retos > #right {
+.proyectos > .contentProyects > #right,
+.retos > .contentRetos > #right {
     right: 0;
+}
+.proyectos > .barra {
+    display: none;
 }
 .barNavigation{
     position: relative;
@@ -208,58 +233,67 @@ main > div.ventanas {
     text-decoration: none;
     color: white;
 }
-.contentProyects,
-.contentRetos {
-    display: flex;
+.contentProyects{
+    position: relative;
     height: calc(100% - 4rem);
+}
+.contentRetos{
+    position: relative;
+    height: calc(100% - 3rem);
+}
+.contentProyects > .content,
+.contentRetos > .content {
+    display: flex;
+    /* height: calc(100% - 4rem); */
+    height: 100%;
     overflow: hidden;
 }
-.contentProyects > picture > img,
-.contentRetos > picture > img {
+.contentProyects > .content > picture > img,
+.contentRetos > .content > picture > img {
     min-width: 100%;
 }
-.contentProyects > div,
-.contentRetos > div {
+.contentProyects > .content > div,
+.contentRetos > .content > div {
     min-width: 100%;
     background-position: center;
     background-size: cover;
     position: relative;
     transition: all 0.5s ease-in-out;
 }
-.contentProyects > div > .info,
-.contentRetos > div > .info {
+.contentProyects > .content > div > .info,
+.contentRetos > .content > div > .info {
     text-align: center;
     position: absolute;
     bottom: 0;
     width: 100%;
     background-color: rgb(0 0 0 / 50%);
 }
-.contentProyects > div > .info > a,
-.contentRetos > div > .info > a {
+.contentProyects > .content > div > .info > a,
+.contentRetos > .content > div > .info > a {
     text-decoration: none;
     color: white;
 }
-.contentProyects > div > .info > a > h2,
-.contentRetos > div > .info > a > h2 {
+.contentProyects > .content > div > .info > a > h2,
+.contentRetos > .content > div > .info > a > h2 {
     padding: 1rem;
     font-size: 1.2rem;
 }
-.contentProyects > div > .info > a > .badge,
-.contentRetos > div > .info > a > .badge {
+.contentProyects > .content > div > .info > a > .badge,
+.contentRetos > .content > div > .info > a > .badge {
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem 0.1rem;  
     padding: 1rem;
     justify-content: center;
 }
-.contentProyects > div > .info > a > .badge > span,
-.contentRetos > div > .info > a > .badge > span {
+.contentProyects > .content > div > .info > a > .badge > span,
+.contentRetos > .content > div > .info > a > .badge > span {
     background-color: green;
     padding: 0.25rem 0.5rem;
     border-radius: 0.5rem;
 }
 .retos {
-    overflow: scroll;
+    overflow: auto;
     background-color: rgb(71 71 76);
     left: 70%;
 }
@@ -273,6 +307,11 @@ main > div.ventanas {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.retos > .barGallery > p,
+.retos > .barGallery > picture,
+.retos > .panel {
+    display: none;
 }
 .contacto {
     overflow: hidden;
@@ -292,6 +331,9 @@ main > div.ventanas {
     transform: translateY(-50%);
     font-size: 1.5rem;
 }
+.contacto > ul > li {
+    list-style: none;
+}
 .contacto > ul > li > a {
     display: grid;
     grid-template-columns: 4rem auto;
@@ -300,9 +342,12 @@ main > div.ventanas {
     text-decoration: none;
     color: white;
 }
-.contacto > ul > li:first-child > a > img {
+.contacto > ul > li:first-child > a > picture > img {
     background-color: white;
     border-radius: 100%;
+}
+.contacto > .barTelegram > picture {
+    display: none;
 }
 .ventanaOpen{
     left: 0;
@@ -336,15 +381,350 @@ main > div.ventanas {
 .menu.active {
     background-color: black;
 }
-main > div.title {
-    position: absolute;
-    top: 2rem;
-    left: 50%;
-    transform: translateX(-50%);
+
+@media (min-width:1024px) {
+    header {
+        background-color: black;
+    }
+    header > .right > picture:nth-child(2){
+        display: none;
+    }
+    .ventanas {
+        position: initial;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* transform: translate(0,0); */
+    }
+    .acercade, .habilidades, .proyectos, .retos, .contacto{
+        position: initial;
+    }
+    main > div.ventanas {
+        background-image: url("./assets/fondos/5070f9e7af565d1d16a3edfd7f53cd1e.png");
+    }
+    main > .menu > ul {
+        justify-content: center;
+        column-gap: 4rem;
+    }
+    .menu.active {
+        background-color: transparent;
+    }
+    .menu.active > ul > li > picture > img.active{
+        box-shadow: 0 0 10px 1px rgb(255 255 255 / 50%);
+        background-color: rgb(255 255 255 / 25%);
+    }
+    .menu > ul > li::before{
+        overflow: hidden;
+        position: absolute;
+        background-color: white;
+        color: black;
+        transform: translate(-30% , -50%);
+        opacity: 0;
+        padding: 0.25rem 1rem;
+        border-radius: 0.5rem;
+        font-weight: bold;
+        transition: all 0.25s ease-in-out;
+    }
+    .menu > ul > li.menuAcercade::before{
+        content: "Acerca";
+    }
+    .menu > ul > li.menuHabilidades::before{
+        content: "Habilidades";
+    }
+    .menu > ul > li.menuProyectos::before{
+        content: "Proyectos";
+    }
+    .menu > ul > li.menuRetos::before{
+        content: "Retos";
+    }
+    .menu > ul > li.menuContacto::before{
+        content: "Contacto";
+    }
+    .menu > ul > li:hover::before{
+        opacity: 1;
+        transform: translate(-30% , -120%);
+    }
+    .acercade {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: 2.5rem 3rem auto;
+        /* background-color: hsl(237deg 100% 4% / 90%); */
+        /* left: 37%; */
+    }
+    .acercade > .barra {
+        background-color: black;
+        padding: 0.25rem 1rem;
+        border-bottom:0;
+        grid-column: 1/3;
+    }
+    .acercade > .barra > picture > img, 
+    .habilidades > .barra > picture > img,
+    .proyectos > .barra > picture > img,
+    .retos > .barGallery > picture > img,
+    .contacto > .barTelegram > picture > img {
+        width: 1.5rem;
+        border-radius: 50%;
+        transition: all 0.2s ease-in-out;
+    }
+    .acercade > .barra > picture > img:hover,
+    .habilidades > .barra > picture > img:hover,
+    .proyectos > .barra > picture > img:hover,
+    .retos > .barGallery > picture > img:hover,
+    .contacto > .barTelegram > picture > img:hover {
+        box-shadow: 0 0 10px 1px white;
+    }
+    .acercade > .avatar {
+        overflow: hidden;
+        height: auto;
+        margin-left: 1rem;
+        margin-top: 2rem;
+        animation: ver 3.2s linear;
+    }
+    .acercade > .nameData {
+        overflow: hidden;
+        padding: 0;
+        margin-top: 2rem;
+        animation: ver 3.2s linear;
+    }
+    .acercade > .avatar > picture > img{
+        position: initial;
+        transform: none;
+    }
+    .acercade > .comando {
+        position: relative;
+        display: initial;
+        grid-column: 1/3;
+        margin-top: 0.8rem;
+        margin-left: 1rem;
+        padding: 0.25rem 0.5rem;
+        width: 12rem;
+        height: 1.5rem;
+        border-radius: 0.25rem 0 0 0.25rem;
+        background-color: green;
+    }
+    .acercade > .comando::after {
+        content: "";
+        position: absolute;
+        border-left: 1rem solid #008000;
+        border-top: 0.7rem solid transparent;
+        border-bottom: 0.8rem solid transparent;
+        right: -1rem;
+        top: 0;
+        bottom: 0;
+    }
+    .acercade > .comando > p {
+        font-weight: bold;
+    }
+    .acercade > .comando > span {
+        position: absolute;
+        left: 14rem;
+        transform: translateY(-50%);
+    }
+    .acercade > .nameData {
+        background-color: transparent;
+    }
+    .acercade > .nameData > h1 {
+        color: #05ff05;
+    }
+    #typed::after{
+        content: "";
+        position: absolute;
+        right: -0.5rem;
+        height: 50%;
+        background-color: #000112;
+        border-left: 2px solid rgb(255, 255, 255);
+        animation: escribir 1.2s 1s backwards steps(8), titilar 1s 0s steps(1) infinite;
+        top: 0;
+        bottom: 0;
+    }
+    @keyframes escribir {
+        from{
+            width: 110%;
+        }
+        to{
+            width: 0;
+        }
+    }
+    @keyframes titilar {
+        50%{border-color: transparent;}
+    }
+    @keyframes ver {
+        0%{
+            height: 0px;
+        }
+        80%{
+            height: 0px;
+        }
+        100%{
+            height: 200px;
+        }
+    }
+    .habilidades::-webkit-scrollbar{
+        width: 0.7rem;
+    }
+    .habilidades::-webkit-scrollbar-thumb {
+        background-color: green;
+        border-radius: 5px;
+    }
+    .habilidades::-webkit-scrollbar-track {
+        background-color: grey;
+        border-radius: 5px;
+    }
+    .habilidades {
+        left: 43%;
+    }
+    .habilidades > .barra{
+        grid-template-columns: 90% auto auto;
+        background-color: black;
+    }
+    .habilidades > .barra > picture:last-child{
+        display: initial;
+    }
+    /* .habilidades > .barra > picture > img{
+        transition: box-shadow 0.25s ease-in-out;
+        border-radius: 50%;
+    } */
+    /* .habilidades > .barra > picture > img:hover{
+        box-shadow: 0 0 10px 1px rgb(255 255 255 / 50%);
+    } */
+    
+    .proyectos > .barra {
+        display: initial;
+        display: grid;
+        grid-template-columns: 97% auto;
+        align-items: center;
+        padding: 1rem;
+        background-color: black;
+    }
+    .proyectos > .barra > p {
+        font-size: 1.5rem;
+    }
+    .proyectos > .barra > picture {
+        margin: auto;
+    }
+    .contentProyects{
+        height: calc(100% - 7.8rem);
+    }
+    .retos {
+        left: 56.5%;
+        display: grid;
+        grid-template-columns: 4rem auto;
+        grid-template-rows: 3rem auto;
+    }
+    .retos > .panel {
+        display: initial;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        padding-top: 1rem;
+        align-items: center;
+        background-color: #161c28;
+    }
+    .retos > .panel > img {
+        max-width: 2rem;
+    }
+    .retos > .barGallery {
+        grid-column: 1/3;
+    }
+    .retos > .barGallery > p {
+        display: inline-flex;
+        font-size: 1.5rem;
+        padding: 0.5rem 1rem;
+    }
+    .retos > .barGallery > picture {
+        display: initial;
+        position: absolute;
+        top: 50%;
+        transform: translate(-1rem, -50%);
+        right: 0;
+    }
+    .contentRetos{
+        /* height: calc(100% - 3rem); */
+        height: 100%;
+    }
+    .contacto{
+        left: 63.5%;
+    }
+    .contacto > .barTelegram > h1 {
+        position: initial;
+        transform: translateY(0);
+        margin-left: 1rem;
+    }
+    .contacto > .barTelegram {
+        display: grid;
+        grid-template-columns: auto 2.5rem;
+        align-items: center;
+    }
+    .contacto > .barTelegram > picture {
+        display: initial;
+    }
+    .contacto > ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        height: calc(100% - 3rem);
+    }
+    .contacto > ul > li > a {
+        grid-template-columns: auto;
+        text-align: center;
+        justify-items: center;
+        grid-row-gap: 0.5rem;
+    }
+    .title {
+        cursor: context-menu;
+    }
+    .title::after {
+        content: "Marco Velasquez Figarella";
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: black;
+        color: white;
+        box-shadow: 0 0 10px 1px rgb(255 255 255 / 50%);
+        font-size: 2rem;
+        padding: 0.5rem;
+        border-radius: 0.5rem;
+        opacity: 0;
+        overflow: hidden;
+        width: 21.4rem;
+        transition: all 0.5s ease-in-out;
+    }
+    .title:hover::after {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+        /* width: 21.4rem; */
+    }
+    .ventanaOpen {
+        width: 60rem;
+        height: 40rem;
+        border-radius: 0.5rem;
+        /* left: 50%; */
+        /* top: 50%; */
+        /* transform: translate(-50%, -50%); */
+    }
+    .proyectos.ventanaOpen,
+    .retos.ventanaOpen{
+        width: 940px;
+        /* height: 750px; */
+        height: 80%;
+    }
 }
-main > div.title > h1 {
-    font-size: 2rem;
-    background-color: white;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
+
+@media (min-width:1300px) {
+    .proyectos.ventanaOpen,
+    .retos.ventanaOpen{
+        width: 1150px;
+        /* height: 750px; */
+        height: 80%;
+    }
+}
+
+@media (min-width:1440px) {
+    .proyectos.ventanaOpen,
+    .retos.ventanaOpen{
+        width: 1300px;
+        height: 750px;
+    }
 }
