--- a/style.css
+++ b/style.css
@@ -8,6 +8,45 @@
 body {
     background-color: white;
 }
+div.overlay{
+    position: fixed;
+    z-index: 99999;
+    background-color: rgb(128 128 128 / 50%);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+div.overlay > p {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3rem;
+    background-color: black;
+    color: white;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    text-align: center;
+    animation: cargando 3s infinite linear;
+
+}
+@keyframes cargando {
+    0%{
+        background-color: black;
+        color: white;
+    }
+    50%{
+        background-color: white;
+        color: black;
+    }
+    100%{
+        background-color: black;
+        color: white;
+    }
+}
 header {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -33,7 +72,7 @@ main {
 }
 main > div.ventanas {
     height: calc(100vh - 1.5rem);
-    background-image: url("./assets/fondos/wallpapersden.com_alien-minimalism_1920x1080.jpg");
+    background-image: url("./assets/fondos/movil.webp");
     background-position: center;
     background-size: cover;
     transition: background-image 0.5s ease-in-out;
@@ -396,7 +435,7 @@ main > div.title > h1 {
         position: initial;
     }
     main > div.ventanas {
-        background-image: url("./assets/fondos/5070f9e7af565d1d16a3edfd7f53cd1e.png");
+        background-image: url("./assets/fondos/escritorio.webp");
     }
     main > .menu > ul {
         justify-content: center;
@@ -472,12 +511,18 @@ main > div.title > h1 {
         height: auto;
         margin-left: 1rem;
         margin-top: 2rem;
+        /* animation: ver 3.2s linear; */
+    }
+    .acercade.ventanaOpen > .avatar {
         animation: ver 3.2s linear;
     }
     .acercade > .nameData {
         overflow: hidden;
         padding: 0;
         margin-top: 2rem;
+        /* animation: ver 3.2s linear; */
+    }
+    .acercade.ventanaOpen > .nameData {
         animation: ver 3.2s linear;
     }
     .acercade > .avatar > picture > img{
@@ -527,9 +572,12 @@ main > div.title > h1 {
         height: 50%;
         background-color: #000112;
         border-left: 2px solid rgb(255, 255, 255);
-        animation: escribir 1.2s 1s backwards steps(8), titilar 1s 0s steps(1) infinite;
+        /* animation: escribir 1.2s 1s backwards steps(8), titilar 1s 0s steps(1) infinite; */
         top: 0;
         bottom: 0;
+    }
+    .acercade.ventanaOpen > .comando > span > #typed::after {
+        animation: escribir 1.2s 1s backwards steps(8), titilar 1s 0s steps(1) infinite;
     }
     @keyframes escribir {
         from{
@@ -573,7 +621,17 @@ main > div.title > h1 {
     }
     .habilidades > .barra > picture:last-child{
         display: initial;
+    }
+    .habilidades > ul > li {
+        height: 5rem;
     }    
+    .habilidades > ul > li > a > img{
+        width: 3.5rem;
+    }
+    .habilidades > ul.grid > li{
+        height: 7rem;
+        width: 8rem;
+    }   
     .proyectos > .barra {
         display: initial;
         display: grid;
@@ -649,6 +707,14 @@ main > div.title > h1 {
         justify-content: space-around;
         align-items: center;
         height: calc(100% - 3rem);
+    }
+    .contacto > ul > li {
+        transition: all 0.25s ease-in-out;
+    }
+    .contacto > ul > li:hover {
+        box-shadow: 0 0 10px 1px white;
+        background-color: rgb(255 255 255 / 50%);
+        border-radius: 0.5rem;
     }
     .contacto > ul > li > a {
         grid-template-columns: auto;
