--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ header {
     grid-template-columns: 50% 50%;
     align-items: center;
     height: 1.5rem;
-    /* background-color: rgb(128 128 128 / 50%); */
     background-color: black;
     color: white;
 }
@@ -96,7 +95,7 @@ main > div.title > h1 {
 .retos,
 .contacto {
     color: white;
-    box-shadow: 0 0 10px 1px rgb(0 0 0);
+    /* box-shadow: 0 0 10px 1px rgb(0 0 0); */
     position: absolute;
     top: calc(100% - 2.4rem);
     width: 0;
@@ -479,10 +478,18 @@ main > div.title > h1 {
         opacity: 1;
         transform: translate(-30% , -120%);
     }
+    .acercade,
+    .habilidades,
+    .proyectos,
+    .retos,
+    .contacto{
+        box-shadow: 0 0 10px 1px rgb(0 0 0);
+    }
     .acercade {
         display: grid;
         grid-template-columns: auto auto;
         grid-template-rows: 2.5rem 3rem auto;
+        background-color: hsl(237deg 100% 4% / 90%);
     }
     .acercade > .barra {
         background-color: black;
@@ -513,7 +520,7 @@ main > div.title > h1 {
         margin-top: 2rem;
     }
     .acercade.ventanaOpen > .avatar {
-        animation: ver 3.2s linear;
+        animation: ver 1.5s linear;
     }
     .acercade > .nameData {
         overflow: hidden;
@@ -521,7 +528,7 @@ main > div.title > h1 {
         margin-top: 2rem;
     }
     .acercade.ventanaOpen > .nameData {
-        animation: ver 3.2s linear;
+        animation: ver 1.5s linear;
     }
     .acercade > .avatar > picture > img{
         position: initial;
@@ -574,7 +581,7 @@ main > div.title > h1 {
         bottom: 0;
     }
     .acercade.ventanaOpen > .comando > span > #typed::after {
-        animation: escribir 1.2s 1s backwards steps(8), titilar 1s 0s steps(1) infinite;
+        animation: escribir 0.5s 0.5s backwards steps(8), titilar 0.5s 0s steps(1) infinite;
     }
     @keyframes escribir {
         from{
